<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ThemeActivity"
    android:id="@+id/parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="70dp">
        <ImageView
            android:id="@+id/imgTheme"
            android:layout_width="130dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_light"/>
        <TextView
            android:id="@+id/tvTheme1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_your_experience"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
       />
        <TextView
            android:id="@+id/tvTheme2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_content"
            android:textColor="@color/second_text_color_light"
            android:textSize="15dp"
            android:gravity="center"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"
            />
        <LinearLayout
            android:id="@+id/lnSwitch"
            android:layout_width="206dp"
            android:layout_height="48dp"
            android:background="@drawable/sw_theme_light"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <RelativeLayout
                android:id="@+id/light"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/tvLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/light_switch_theme_tv_light"
                    android:text="@string/light"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/inter_semibold"
                    android:textSize="16dp"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/dark"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/tvDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/light_switch_theme_tv_dark"
                    android:text="@string/dark"
                    android:layout_centerInParent="true"
                    android:textSize="16dp"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_next"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_15sdp"
        android:layout_alignParentBottom="true"
        android:paddingVertical="18dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:fontFamily="@font/inter_medium"/>
    </RelativeLayout>
</RelativeLayout>