<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.PermissionActivity"
        android:background="?attr/background_theme">



        <LinearLayout
            android:id="@+id/frame_321"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvTitlePer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission"
                android:gravity="left"
                android:textSize="22sp"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_32sdp"
                android:fontFamily="@font/inter_bold"
                android:textColor="?attr/text_color"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tvcontentPer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_content"
                android:gravity="center"
                android:lineSpacingExtra="5sp"
                android:textSize="16sp"
                android:paddingHorizontal="@dimen/_16sdp"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:textColor="?attr/text_color"
                android:layout_marginTop="@dimen/_40sdp"

                />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="@dimen/_20sdp"
                app:cardElevation="5dp"
                android:background="?attr/background_rcv"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginHorizontal="@dimen/_10sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:paddingVertical="3dp"
                    android:background="@drawable/bg_item_language">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_switch_permission"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="@string/allow_access"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="?attr/text_color"
                        android:shadowColor="@color/black"
                        />

                    <!--                    <androidx.appcompat.widget.SwitchCompat-->
                    <!--                        android:id="@+id/sw_permission"-->
                    <!--                        android:layout_width="wrap_content"-->
                    <!--                        android:layout_height="wrap_content"-->
                    <!--                        android:layout_alignParentEnd="true"-->
                    <!--                        android:switchMinWidth="30dp"-->
                    <!--                        app:thumbTint="@color/white"-->
                    <!--                        app:trackTint="@color/text_btn_start"/>-->

                    <Switch
                        android:id="@+id/sw_permission"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="10dp"
                        android:padding="10dp"
                        android:track="@drawable/track_selector"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animSwitch"
            android:layout_width="@dimen/_48sdp"
            android:layout_height="@dimen/_41sdp"
            app:layout_constraintTop_toBottomOf="@+id/frame_321"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="-48dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:background="#00000000"
            app:lottie_rawRes="@raw/click_allow_access" />
        <TextView
            android:id="@+id/tv_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/frame_321"
            app:layout_constraintStart_toStartOf="@+id/frame_321"
            android:layout_marginStart="@dimen/_16sdp"
            android:text="@string/allowed"
            android:visibility="invisible"
            android:textSize="12sp"
            android:textColor="#0BC63F"
            android:textStyle="italic"
            android:layout_marginTop="@dimen/_8sdp"/>
        <TextView
            android:id="@+id/tv_notPermission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/frame_321"
            app:layout_constraintStart_toStartOf="@+id/frame_321"
            android:layout_marginStart="@dimen/_16sdp"
            android:text="@string/not_allowed"
            android:textSize="12sp"

            android:textStyle="italic"
            android:textColor="#FF2626"
            android:layout_marginTop="@dimen/_8sdp"/>

    <RelativeLayout
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_ctn"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_60sdp"
        android:layout_alignParentBottom="true"
        android:paddingVertical="18dp"
        app:layout_constraintTop_toBottomOf="@+id/frame_321">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/btn_continue"
            android:textColor="#1FAEB5"
            android:textSize="16sp" />
    </RelativeLayout>
        <TextView
            android:id="@+id/tv_permission_later"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btnNext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_16sdp"
            android:textSize="14sp"
            android:textColor="#8C8C8C"
            android:lineSpacingExtra="7sp"
            android:translationY="-3.53sp"
            android:gravity="center_horizontal|top"
            android:textStyle="italic"
            android:text="@string/grand_permission"/>
        <FrameLayout
            android:id="@+id/nativePermission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:minHeight="200dp"
            android:layout_alignParentBottom="true"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
